--- a/my_lib/templates/my_lib/index.html
+++ b/my_lib/templates/my_lib/index.html
@@ -3,15 +3,15 @@
 
 {% block body %}
     <div class="" id="home-main-container">
-        <form>
+        <div>
             <label for="search">Search</label>
             <input type="text" id="search" name="search" />
             <button id="home-search-button">Search</button>
-            <label for="author">Author</label>
-            <input type="radio" id="author" name="author" />
-            <label for="bookname">Bookname</label>
-            <input type="radio" id="bookname" name="name" />
-        </form>
+            <label for="author-radio">Author</label>
+            <input type="radio" id="author-radio" name="author" />
+            <label for="bookname-radio">Bookname</label>
+            <input type="radio" id="bookname-radio" name="name" />
+        </div>
         <div id="home-container"></div>
     </div>
 {% endblock %}
