--- a/my_lib/templates/my_lib/layout.html
+++ b/my_lib/templates/my_lib/layout.html
@@ -8,46 +8,42 @@
         {% block script %}
         {% endblock %}
     </head>
-    <body>
-
-        <nav class="navbar">
-            <a class="" href="#">My Lib'</a>
-          
-            <div>
-              <ul class="">
-                {% if user.is_authenticated %}
-                    <li class="">
-                        <a class="" href="{% url 'profile' 'my-profile'%}"><strong>{{ user.username }}</strong></a>
-                    </li>
-                {% endif %}
-                <li class="">
-                  <a class="" id="link-home" href="{% url 'index' %}">Home</a>
-                </li>
-                {% if user.is_authenticated %}
-                    <li class="">
-                        <a class="" id="link-library" href="{% url 'library' %}">My Library</a>
-                    </li>
-                    <li class="">
-                        <a class="" id="link-recommendator" href="{% url 'recommendator' %}">Recommandator</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="{% url 'logout' %}">Log Out</a>
-                    </li>
-                {% else %}
-                    <li class="">
-                        <a class="" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="{% url 'register' %}">Register</a>
-                    </li>
-                {% endif %}
-              </ul>
-            </div>
-          </nav>
+    <header>
+        <h1><a class="" href="#">My Lib'</a></h1>
         
-        <div class="body">
-            {% block body %}
-            {% endblock %}
-        </div>
+        <nav class="navbar">
+            <ul class="">
+            {% if user.is_authenticated %}
+                <li class="">
+                    <a class="" href="{% url 'profile' 'my-profile'%}"><strong>{{ user.username }}</strong></a>
+                </li>
+            {% endif %}
+            <li class="">
+                <a class="" id="link-home" href="{% url 'index' %}">Home</a>
+            </li>
+            {% if user.is_authenticated %}
+                <li class="">
+                    <a class="" id="link-library" href="{% url 'library' %}">My Library</a>
+                </li>
+                <li class="">
+                    <a class="" id="link-recommendator" href="{% url 'recommendator' %}">Recommandator</a>
+                </li>
+                <li class="">
+                    <a class="" href="{% url 'logout' %}">Log Out</a>
+                </li>
+            {% else %}
+                <li class="">
+                    <a class="" href="{% url 'login' %}">Log In</a>
+                </li>
+                <li class="">
+                    <a class="" href="{% url 'register' %}">Register</a>
+                </li>
+            {% endif %}
+            </ul>
+        </nav>
+    </header>
+    <body class="body">
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
