fix: bug on search function

--- a/my_lib/templates/my_lib/index.html
+++ b/my_lib/templates/my_lib/index.html
@@ -12,7 +12,9 @@
             <label for="bookname-radio">Bookname</label>
             <input type="radio" id="bookname-radio" name="name" />
         </div>
-        <div id="home-container"></div>
+        <div id="home-container">
+            <div>Welcome to MyLib' </div>
+        </div>
     </div>
 {% endblock %}
 
