--- a/my_lib/static/my_lib/styles.css
+++ b/my_lib/static/my_lib/styles.css
@@ -10,81 +10,107 @@ body {
 
 a {
     text-decoration: none;
-  }
-  
-  ul {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: no-wrap;
-  }
-  
-  ul li {
-    display: inline;
-  }
-  
-  .navbar {
-    flex-grow: 0.6;
-    max-width: 50vw;
-  }
-  
-  .card {
-    margin: 1vw;
-    border: 1px solid black;
-    height: 80vh;
-    border-radius: 10px;
-  }
-  
-  .card-header {
-    height: 10vh;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .card-container {
-    display: flex;
-    align-items: center;
-    height: 77.5%;
-  }
-  
-  .arrow {
-    font-size: 5rem;
-    cursor: pointer;
-    transform: scale(0.6, 2.8);
-  }
-  
-  .card-inner-container {
-    flex-grow: 1;
-    padding: 20px;
-    height: 91%;
-  }
-  
-  .zoomed-card {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    height: 80vh;
-    width: 50vw;
-    background-color: rgba(188, 143, 143, 0.9);
-    box-shadow: 0px 0px 5px 24px rgba(188,143,143,0.9);
-      -webkit-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
-      -moz-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
-    border-radius: 5px;
-    visibility: hidden;
-  }
-  
-  .card-title {
-    padding: 5px;
-  }
-  
-  .button {
-    margin-right: 10px;
-    padding: 5px 15px;
-    border: 1px solid lightblue;
-    border-radius: 25px;
-    background-color: lightblue;
-  }
+}
+
+.inner-nav {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: no-wrap;
+}
+
+.inner-nav li {
+  display: inline;
+}
+
+.navbar {
+  flex-grow: 0.6;
+  max-width: 50vw;
+}
+
+.card {
+  margin: 1vw;
+  border: 1px solid black;
+  height: 80vh;
+  border-radius: 10px;
+}
+
+.card-header {
+  height: 10vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  align-items: center;
+  height: 77.5%;
+}
+
+.arrow {
+  font-size: 5rem;
+  cursor: pointer;
+  transform: scale(0.6, 2.8);
+}
+
+.card-inner-container {
+  flex-grow: 1;
+  padding: 20px;
+  height: 91%;
+}
+
+.zoomed-card {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 80vh;
+  width: 50vw;
+  background-color: rgba(188, 143, 143, 0.9);
+  box-shadow: 0px 0px 5px 24px rgba(188,143,143,0.9);
+    -webkit-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
+    -moz-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
+  border-radius: 5px;
+  visibility: hidden;
+}
+
+.card-title {
+  padding: 5px;
+}
+
+.button {
+  margin-right: 10px;
+  padding: 5px 15px;
+  border: 1px solid lightblue;
+  border-radius: 25px;
+  background-color: lightblue;
+}
+
+/*******************************************************/
+
+/* Book card */
+
+.bookcard-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 15%;
+}
+
+/* Alert in book card */
+
+
+.bookcard-header-alert {
+  width: 0;
+  border-radius: 5px;
+}
+
+.bookcard-alert-display {
+  width: 60%;
+  transition: width 1s ease-in-out;
+  background-color: rgba(255, 0, 0, 0.5);
+  margin-right: 2%;
+}
