feat: add book to a specific list

--- a/my_lib/templates/my_lib/library.html
+++ b/my_lib/templates/my_lib/library.html
@@ -5,19 +5,27 @@
     <div class="card" id="books-main-container">
         <div class="card-header" id="books-header">
             <h2 class="card-title">My books</h2>
-            <nav class="navbar">
+            <nav>
                 <ul>
-                    <li id="readings-link">Readings</li>
-                    <li id="read-link">Read</li>
-                    <li id="to-read-link">To Read</li>
-                    <li id="all-stars-link">5-Stars</li>
+                    <li>
+                        <a>Readings<img src="" alt=" 📖"></a>
+                    </li>
+                    <li>
+                        <a>Read<img src="" alt=" ✔"></a>
+                    </li>
+                    <li>
+                        <a>To read<img src="" alt=" 📚"></a>
+                    </li>
+                    <li>
+                        <a>5 stars<img src="" alt=" 🏆"></a>
+                    </li>
                 </ul>
             </nav>
         </div>
         <div class="card-container" id="books-body">
             <div class="arrow"><</div>
                 <div class="card-inner-container" id="books-container">
-                <div class="zoomed-card"></div>
+                    <div class="zoomed-card"></div>
                 </div>
             <div class="arrow">></div>
         </div>
