--- a/my_lib/templates/my_lib/layout.html
+++ b/my_lib/templates/my_lib/layout.html
@@ -5,6 +5,7 @@
     <head>
         <title>{% block title %}My Lib'{% endblock %}</title>
         <link href="{% static 'my_lib/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'my_lib/dropdown.css' %}" rel="stylesheet">
         {% block script %}
         {% endblock %}
     </head>
@@ -12,7 +13,7 @@
         <h1><a class="" href="#">My Lib'</a></h1>
         
         <nav class="navbar">
-            <ul class="">
+            <ul class="inner-nav">
             {% if user.is_authenticated %}
                 <li class="">
                     <a class="" href="{% url 'profile' 'my-profile'%}"><strong>{{ user.username }}</strong></a>
