--- a/my_lib/static/my_lib/styles.css
+++ b/my_lib/static/my_lib/styles.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,25 +6,6 @@ header {
 
 body {
   margin: 0 1vw;
-}
-
-a {
-    text-decoration: none;
-}
-
-.inner-nav {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: no-wrap;
-}
-
-.inner-nav li {
-  display: inline;
-}
-
-.navbar {
-  flex-grow: 0.6;
-  max-width: 50vw;
 }
 
 .card {
@@ -69,12 +50,14 @@ a {
   margin: auto;
   height: 80vh;
   width: 50vw;
+  overflow: scroll;
   background-color: rgba(188, 143, 143, 0.9);
   box-shadow: 0px 0px 5px 24px rgba(188,143,143,0.9);
     -webkit-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
     -moz-box-shadow: 0px 0px 5px 24px rgba(188, 143, 143,0.9);
   border-radius: 5px;
   visibility: hidden;
+  z-index: 1000;
 }
 
 .card-title {
@@ -91,26 +74,43 @@ a {
 
 /*******************************************************/
 
-/* Book card */
+/* Results containers */
 
-.bookcard-header {
+.results-container {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 15%;
 }
 
-/* Alert in book card */
+/*******************************************************/
 
+/* Navbars */
 
-.bookcard-header-alert {
-  width: 0;
-  border-radius: 5px;
+a {
+  text-decoration: none;
 }
 
-.bookcard-alert-display {
-  width: 60%;
-  transition: width 1s ease-in-out;
-  background-color: rgba(255, 0, 0, 0.5);
-  margin-right: 2%;
+.inner-nav {
+display: flex;
+justify-content: space-around;
+flex-wrap: no-wrap;
 }
+
+.inner-nav li {
+display: inline;
+cursor: pointer;
+}
+
+.navbar {
+flex-grow: 0.6;
+max-width: 50vw;
+}
+
+.inline-ul li{
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.li-as-link {
+  cursor: pointer;
+}
+
