--- a/my_lib/templates/my_lib/layout.html
+++ b/my_lib/templates/my_lib/layout.html
@@ -7,6 +7,7 @@
         <link href="{% static 'my_lib/styles.css' %}" rel="stylesheet">
         <link href="{% static 'my_lib/dropdown.css' %}" rel="stylesheet">
         <link href="{% static 'my_lib/bookcards.css' %}" rel="stylesheet">
+        <link href="{% static 'my_lib/library.css' %}" rel="stylesheet">
         {% block script %}
         {% endblock %}
     </head>
