--- a/my_lib/static/my_lib/bookcards.css
+++ b/my_lib/static/my_lib/bookcards.css
@@ -4,6 +4,7 @@
     height: 30vh;
     max-height: 150px;
     width: 40vw;
+    min-width: 300px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.50);
     border-radius: 25px;
   }
@@ -25,6 +26,7 @@
   
   .bookcard-panel-buttons {
     width: 5%;
+    min-width: 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -42,3 +44,52 @@
     border-radius: 50px;
     overflow: hidden;
   }
+
+.bookview-container {
+  display: flex;
+  height: fit-content;
+  width: fit-content;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+.bookview-title {
+  text-align: center;
+  height: 5%;
+}
+
+.bookview-author {
+  height: 5%;
+  color: lightgray;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+
+
+.bookview-info-container {
+  display: flex;
+  height: 5%;
+  justify-content: space-between;
+}
+
+.bookview-info-container div {
+  margin: 0px 20px;
+  text-align: center;
+}
+
+.bookview-synopsis {
+  height: 40%;
+  overflow: scroll;
+  padding: 20px;
+}
+
+.bookview-comments {
+  height: 40%;
+  overflow: scroll;
+  padding: 20px;
+}
