feat: add pagination functionalitie

--- a/my_lib/templates/my_lib/index.html
+++ b/my_lib/templates/my_lib/index.html
@@ -13,7 +13,11 @@
             <label for="bookname-radio">Bookname</label>
             <input type="radio" id="bookname-radio" name="type" value="bookname" />
         </div>
-        <div class="results-container" id="search-results-container"></div>
+        <div class="card-container" >
+            <button class="arrow" id="search-left-arrow"><</button>
+            <div class="results-container" id="search-results-container"></div>
+            <button class="arrow" id="search-right-arrow">></button>
+        </div>
         <div id="whats-new-container">
             <h4>What's new on My Lib'</h4>
             <div id="new-sub-container"></div>
