--- a/my_lib/templates/my_lib/layout.html
+++ b/my_lib/templates/my_lib/layout.html
@@ -11,6 +11,7 @@
         {% block script %}
         {% endblock %}
     </head>
+    <div class="alert" id="alert-comment"></div>
     <div class="header">
         <h1><a class="" href="#">My Lib'</a></h1>
         
