--- a/my_lib/static/my_lib/styles.css
+++ b/my_lib/static/my_lib/styles.css
@@ -25,17 +25,28 @@ body {
 
 .card-container {
   display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
   align-items: center;
   height: 77.5%;
+  margin: auto;
 }
 
 .arrow {
   font-size: 5rem;
-  cursor: pointer;
   transform: scale(0.6, 2.8);
   z-index: 5;
   max-width: 10%;
+  border: 0 solid transparent;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.25);
 }
+
+.enabled-arrow {
+  color: rgba(0, 0, 0, 1);
+  cursor: pointer;
+}
+
 
 .card-inner-container {
   flex-grow: 1;
@@ -119,3 +130,32 @@ max-width: 50vw;
   cursor: pointer;
 }
 
+/*******************************************************/
+
+/* Alert comment */
+
+
+.alert {
+  position: absolute;
+  visibility: hidden;
+  margin: 5px;
+  box-sizing: border-box;
+  width: 95%;
+  border-radius: 25px;
+  padding-left: 5px;
+}
+
+.alert-display {
+  visibility: visible;
+  height: 5vh;
+  transition: height 2s ease-in-out;
+}
+
+.alert-primary {
+  background-color: cadetblue;
+}
+
+.alert-danger {
+  background-color: firebrick;
+  color: white;
+}
