fix: display pagination bugs(solved)

--- a/my_lib/templates/my_lib/index.html
+++ b/my_lib/templates/my_lib/index.html
@@ -16,6 +16,7 @@
         <div class="card-container" >
             <button class="arrow" id="search-left-arrow"><</button>
             <div class="results-container" id="search-results-container"></div>
+            <div class="zoomed-card" id="book-sheet"></div>
             <button class="arrow" id="search-right-arrow">></button>
         </div>
         <div id="whats-new-container">
