--- a/my_lib/templates/my_lib/library.html
+++ b/my_lib/templates/my_lib/library.html
@@ -27,10 +27,10 @@
             </nav>
         </div>
         <div class="card-container" id="books-body">
-            <div class="arrow"><</div>
+            <div class="arrow" id="library-left-arrow"><</div>
                 <div class="card-inner-container" id="books-container"></div>
                 <div class="zoomed-card" id="book-sheet"></div>
-            <div class="arrow">></div>
+            <div class="arrow" id="library-right-arrow">></div>
         </div>
    </div>
 {% endblock %}
