--- a/my_lib/templates/my_lib/library.html
+++ b/my_lib/templates/my_lib/library.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block body %}
-    <div class="card" id="books-main-container">
+    <div class="main-container" id="books-main-container">
         <div class="card-header" id="books-header">
-            <h2 class="card-title">My books</h2>
+            <h2 class="title">My books</h2>
             <nav class="navbar">
                 <ul class="inline-ul">
                     <li class="li-as-link" id="link-readings">
