--- a/my_lib/templates/my_lib/index.html
+++ b/my_lib/templates/my_lib/index.html
@@ -2,26 +2,29 @@
 {% load static %}
 
 {% block body %}
-    <div id="home-view">
-        <h3>Welcome</h3>
+    <div class="main-container" id="home-view">
+        <div class="card-header"><h3 class="title">Welcome</h3></div>
+        
         <div id="search-container">
             <label for="search-input">Search</label>
             <input type="text" id="search-input" name="search" />
-            <button id="search-button">Search</button>
-            <label for="author-radio">Author</label>
-            <input type="radio" id="author-radio" name="type" value="author" required />
-            <label for="bookname-radio">Bookname</label>
-            <input type="radio" id="bookname-radio" name="type" value="bookname" />
+            <button class="button" id="search-button">Search</button>
+            <div class="radio-container">
+                <label for="author-radio">
+                    <input type="radio" class="option-input" id="author-radio" name="type" value="author" required />
+                    <span class="checkmark">Author</span>
+                </label>
+                <label for="bookname-radio">
+                    <input type="radio" class="option-input" id="bookname-radio" name="type" value="bookname" checked/>
+                    <span class="checkmark">Bookname</span>
+                </label>
+            </div>
         </div>
         <div class="card-container" >
             <button class="arrow" id="search-left-arrow"><</button>
             <div class="results-container" id="search-results-container"></div>
             <div class="zoomed-card" id="book-sheet"></div>
             <button class="arrow" id="search-right-arrow">></button>
-        </div>
-        <div id="whats-new-container">
-            <h4>What's new on My Lib'</h4>
-            <div id="new-sub-container"></div>
         </div>
     </div>
 
