--- a/my_lib/templates/my_lib/login.html
+++ b/my_lib/templates/my_lib/login.html
@@ -1,24 +1,24 @@
 {% extends "my_lib/layout.html" %}
 
 {% block body %}
+    <div class="main-container">
+        <h2 class="card-header">Login</h2>
 
-    <h2>Login</h2>
+        {% if message %}
+            <div>{{ message }}</div>
+        {% endif %}
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+        <form class="forms" action="{% url 'login' %}" method="post">
+            {% csrf_token %}
+            <div class="">
+                <input autofocus class="" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="">
+                <input class="" type="password" name="password" placeholder="Password">
+            </div>
+            <input class="" type="submit" value="Login">
+        </form>
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="">
-            <input autofocus class="" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="">
-            <input class="" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+        Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    </div>
 {% endblock %}
