--- a/my_lib/templates/my_lib/register.html
+++ b/my_lib/templates/my_lib/register.html
@@ -1,30 +1,31 @@
 {% extends "my_lib/layout.html" %}
 
 {% block body %}
+    <div class="main-container">
+        <h2 class="card-header">Register</h2>
 
-    <h2>Register</h2>
+        {% if message %}
+            <div>{{ message }}</div>
+        {% endif %}
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+        <form class="forms" action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="">
+                <input class="" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="">
+                <input class="" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="">
+                <input class="" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="">
+                <input class="" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <input class="" type="submit" value="Register">
+        </form>
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="">
-            <input class="" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="">
-            <input class="" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="">
-            <input class="" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="">
-            <input class="" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="" type="submit" value="Register">
-    </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    </div>
 
 {% endblock %}
