fix: recommendator bugs

--- a/my_lib/templates/my_lib/recommendator.html
+++ b/my_lib/templates/my_lib/recommendator.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <div class="card" id="recommendator-main-container">
+    <div class="main-container" id="recommendator-main-container">
         <div class="card-header">
             <h2 class="card-title">Reccommendator</h2>
             <button class="button" id="recommendator-button">Refresh</button>
